--- a/docker/my-project-name.service
+++ b/docker/my-project-name.service
@@ -3,11 +3,11 @@ Description=A matrix bot that does amazing things!
 
 [Service]
 Type=simple
-User=my-project-name
-Group=my-project-name
-WorkingDirectory=/path/to/my-project-name/docker
-ExecStart=/usr/bin/docker-compose up my-project-name
-ExecStop=/usr/bin/docker-compose stop my-project-name
+User=middleman.py
+Group=middleman.py
+WorkingDirectory=/path/to/middleman.py/docker
+ExecStart=/usr/bin/docker-compose up middleman.py
+ExecStop=/usr/bin/docker-compose stop middleman.py
 RemainAfterExit=yes
 Restart=always
 RestartSec=3
