Enable logging in using an access token
We do a `client.load_store()` to restore a previous session.

If both token and password are defined, token is preferred, since it wont create a new device for the bot. One or the other needs to be defined.

Requires https://github.com/anoadragon453/nio-template/pull/20 for the configuration change since password and access token must both be optional (but one must be given).

--- a/sample.config.yaml
+++ b/sample.config.yaml
@@ -9,8 +9,10 @@ command_prefix: "!c"
 matrix:
   # The Matrix User ID of the bot account
   user_id: "@bot:example.com"
-  # Matrix account password
+  # Matrix account password (optional if access token used)
   user_password: ""
+  # Matrix account access token (optional if password used)
+  #user_token: ""
   # The URL of the homeserver to connect to
   homeserver_url: https://example.com
   # The device ID that is **non pre-existing** device
