--- a/sample.config.yaml
+++ b/sample.config.yaml
@@ -21,6 +21,11 @@ matrix:
   # What to name the logged in device
   device_name: middleman-bot
 
+middleman:
+  # Management room where proxied messages are sent and where actions are taken
+  # Can be an alias or room ID. Middleman must be able to join it on startup.
+  management_room: "!1234567:example.com"
+
 storage:
   # The database connection string
   # For SQLite3, this would look like:
