Allow anonymising senders via config
This provides sender anonymity towards the management room users. It doesn't guarantee anonymity in logs etc against sysadmins.

Also drop the sender column in the messages table. If we're not using it, no point in storing it.

--- a/sample.config.yaml
+++ b/sample.config.yaml
@@ -25,6 +25,10 @@ middleman:
   # Management room where proxied messages are sent and where actions are taken
   # Can be an alias or room ID. Middleman must be able to join it on startup.
   management_room: "!1234567:example.com"
+  # Anonymous senders
+  # If set to true, relayed messages to management room will not contain
+  # any sender information.
+  anonymise_senders: false
 
 storage:
   # The database connection string
