--- a/sample.config.yaml
+++ b/sample.config.yaml
@@ -56,6 +56,8 @@ storage:
 logging:
   # Logging level
   # Allowed levels are 'INFO', 'WARNING', 'ERROR', 'DEBUG' where DEBUG is most verbose
+  # NOTE! DEBUG will print out all messages to the logs which could be a bad privacy
+  # thing - only use it to actually debug!
   level: INFO
   # Configure logging to a file
   file_logging:
