--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile
 #
-aiofiles==0.6.0
+aiofiles==23.2.1
     # via matrix-nio
-aiohttp==3.9.2
+aiohttp==3.9.5
     # via
     #   aiohttp-socks
     #   matrix-nio
@@ -14,35 +14,34 @@ aiohttp-socks==0.7.1
     # via matrix-nio
 aiolog @ git+https://github.com/jaywink/aiolog.git@0db27c59a1694857f58c2bae6874fb25c6c6f262
     # via -r requirements.in
-aiosignal==1.2.0
+aiosignal==1.3.1
     # via aiohttp
-async-timeout==4.0.2
+async-timeout==4.0.3
     # via
     #   aiohttp
     #   aiolog
     #   python-socks
 atomicwrites==1.4.1
     # via matrix-nio
-attrs==22.1.0
+attrs==23.2.0
     # via
     #   aiohttp
     #   aiohttp-socks
     #   jsonschema
+    #   referencing
 cachetools==4.2.4
     # via matrix-nio
-cffi==1.15.1
+cffi==1.16.0
     # via python-olm
 commonmark==0.9.1
     # via -r requirements.in
-frozenlist==1.3.1
+frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
 future==0.18.3
-    # via
-    #   matrix-nio
-    #   python-olm
-h11==0.12.0
+    # via matrix-nio
+h11==0.14.0
     # via matrix-nio
 h2==4.1.0
     # via matrix-nio
@@ -50,35 +49,43 @@ hpack==4.0.0
     # via h2
 hyperframe==6.0.1
     # via h2
-idna==3.4
+idna==3.7
     # via yarl
-jsonschema==4.16.0
+jsonschema==4.23.0
     # via matrix-nio
-logbook==1.5.3
+jsonschema-specifications==2023.12.1
+    # via jsonschema
+logbook==1.7.0.post0
     # via matrix-nio
-matrix-nio[e2e]==0.20.0
+matrix-nio[e2e]==0.20.2
     # via -r requirements.in
-multidict==6.0.2
+multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-peewee==3.15.3
+peewee==3.17.6
     # via matrix-nio
-psycopg2==2.9.3
+psycopg2==2.9.9
     # via -r requirements.in
-pycparser==2.21
+pycparser==2.22
     # via cffi
-pycryptodome==3.19.1
+pycryptodome==3.20.0
     # via matrix-nio
-pyrsistent==0.18.1
-    # via jsonschema
-python-olm==3.1.3
+python-olm==3.2.16
     # via matrix-nio
-python-socks[asyncio]==2.0.3
+python-socks[asyncio]==2.5.0
     # via aiohttp-socks
 pyyaml==6.0.1
     # via -r requirements.in
+referencing==0.35.1
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+rpds-py==0.19.0
+    # via
+    #   jsonschema
+    #   referencing
 unpaddedbase64==2.1.0
     # via matrix-nio
-yarl==1.8.1
+yarl==1.9.4
     # via aiohttp
